// Copyright(c) 2017-2018 Zededa, Inc.
// All rights reserved.

syntax = "proto3";

package org.lfedge.eve.config;
option go_package  = "github.com/lf-edge/eve/api/go/config";
option java_package = "org.lfedge.eve.config";

import "config/acipherinfo.proto";
import "config/appconfig.proto";
import "config/baseosconfig.proto";
import "config/devcommon.proto";
import "config/devmodel.proto";
import "config/netconfig.proto";
import "config/netinst.proto";
import "config/storage.proto";

//Â This is the response to a GET /api/v1/edgeDevice/config
// The EdgeDevConfig message carries all of the device's configuration from
// the controller to the device.
// The device will request these messages either periodically or as a result
// of some TBD notification.
// The message is assumed to be protected by a TLS session bound to the
// device certificate.
message EdgeDevConfig {
  UUIDandVersion id = 1;
  // deprecated = 2;
  // deprecated = 3;

  repeated AppInstanceConfig apps   = 4;
  repeated NetworkConfig networks = 5;
  repeated DatastoreConfig datastores = 6;

  // deprecated 7; DeviceLispDetails lispInfo = 7
  repeated BaseOSConfig base = 8;        // BaseOSImage config block
  DeviceOpsCmd reboot = 9;
  DeviceOpsCmd backup = 10;

  repeated ConfigItem configItems = 11;

  // systemAdapterList - List of DeviceNetworkAdapters. Only Network
  //  adapters ( Ex: eth0, wlan1 etc ) have a corresponding SystemAdapter.
  // non-Network adapters do not have systemadapters.
  repeated SystemAdapter systemAdapterList = 12;

  // deviceIoList - List of Physical Adapters. Includes both Network
  //  Adapters and Non-Network Adapters ( USB / Com etc )
  repeated PhysicalIO deviceIoList = 13;

  // Override dmidecode info if set
  string manufacturer = 14;
  string productName = 15;

  repeated NetworkInstanceConfig networkInstances = 16;

  // Information saved by device to make it easier to find in the controller
  string enterprise = 17;
  string name = 18;

  // controller supplies a list of cipher contexts,
  // containing certificate and other details, to be
  // used for sensitive data decryption
  repeated CipherContext cipherContexts = 19;

  // These images aka ContentTrees and Volumes should be created by EVE
  // independently of any application usage.
  // Application instances will refer to the volumes.
  repeated ContentTree contentInfo = 20;
  repeated Volume volumes = 21;

  // This field is used by the device to detect when it needs to re-download
  // the controller certs using the /certs API endpoint.
  // The controller just needs to ensure this value changes when it wants the
  // device to re-fetch the controller certs, for instance by having it
  // be a hash of all of the controller certificates.
  string controllercert_confighash = 22;
  // deprecated 23;
}

message ConfigRequest {
  string configHash = 1;
  bytes  integrity_token = 2; // value provided by controller during remote attestation
}

message ConfigResponse {
  EdgeDevConfig config = 1;
  string configHash = 2;
}
